# Advent-of-code

./: .gitignore  advent10.py  advent14.py  advent17.py  advent17_2.py  advent18.cpp  advent3 (old).py  advent3.py
2015/: 01.py  02.py
2016/: advent01.cpp  advent02.py  advent02.txt  advent04_new.py  advent05.py  advent06.py  advent06.txt  advent07.py  advent08.py  advent09.py  advent10.py  advent11.py  advent12.py  advent12_py.py  advent13.py  advent14_old.py  advent15.py  advent16.py  advent18  advent18.py  advent18_1.py  advent19.hs  advent19.py  advent20.py  advent21.py  advent21.txt  advent22.py  advent22.txt  advent24.py  advent4.py
2017/: 01.py  02.py  03.py  04.py  05.py  06.py
2018/: 01.input  01.py  02.py  03.py  04.py  05.py  25.py
2019/: 01.py  02.kts  02.py  03.kts  04.kts  05.input  05.kts  Intcode.kt
2020/: 01.kts  02.kts  03.kts  04.kts  05.kts  06.kts  07.kts  08.kts  09.kts  10.kts
2022/: 01.kts  02.go  03.go  04.input  04.kts
2023/: 01.hs  02.hs  06.hs  07.hs  2023.hs  Aoc07.hs  Aoc08.hs  Aoc09.hs  Aoc11.hs  Aoc15.hs  x2023.cabal
2024/: Cargo.toml
2024/src/: aoc02.rs  aoc03.rs  main.rs
2025/: 2025.hs  Aoc01.hs  Aoc02.hs  Aoc03.hs  x2025.cabal
