cabal-version:      3.0

name:               x2025
version:            0.1.0.0

license:            MIT
license-file:       LICENSE

author:             Peter Trifanov
maintainer:         peter.trifanov@gmail.com

extra-source-files: CHANGELOG.md

executable x2025
    main-is:          2025.hs
    other-modules: Aoc01, Aoc02, Aoc03
    build-depends:    base ^>=4.20.2.0, text==2.1.3, split==0.2.5
    default-language: Haskell2010
    ghc-options: -O2
